# http-client-lite

./: .clang-format  .clang-tidy  CMakeLists.txt
cmake/: clang-format.cmake  clang-tidy.cmake  compiler.cmake
examples/: CMakeLists.txt  sandbox.cpp  simple_request.cpp
include/jdl/: httpclientlite.hpp
tests/: CMakeLists.txt  buffer.cpp  catch.hpp  http_client.cpp  offseter.cpp  string_chunk.cpp  testhelper.hpp  tokenizer.cpp  uri.cpp  uri_old.cpp  url.cpp
